<resources>
    <string name="app_name">SensorDemo</string>
    <string name="item_name">item name</string>
    <string name="label_main">Sensor</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="label_accelerometer">Accelerometer</string>
    <string name="label_orientation">Orientation</string>
    <string name="label_gyroscope">Gyroscope</string>
    <string name="shake">Shake</string>
    <string name="label_light">Light</string>
    <string name="sensors_of_your_device">Sensors of Your Device</string>
    <string name="author_email">lys74123@163.com</string>
    <string name="author">Felix Liang</string>
    <string name="transition_name">transition name</string>
    <string name="sensor_vendor">Vendor</string>
    <string name="sensor_maximum_range">Maximum Range</string>
    <string name="sensor_power">Power</string>
    <string name="sensor_resolution">Resolution</string>
    <string name="label_sensor_detail">Sensor Detail</string>
    <string name="label_pressure">Pressure</string>
    <string name="label_proximity">Proximity</string>
    <string name="label_temperature">Temperature</string>
</resources>
