<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/ic_nav_header">

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:contentDescription="@null"
                android:src="@drawable/vector_nav_photo" />

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_photo"
                android:layout_centerInParent="true"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/author"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/tv_author"
                android:layout_below="@+id/tv_author"
                android:text="@string/author_email"
                android:textSize="12sp" />
        </RelativeLayout>

        <TextView
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#7F000000"
            android:paddingBottom="16dp"
            android:paddingTop="18dp"
            android:text="@string/sensors_of_your_device"
            android:textSize="16sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_support_sensor_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>